--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name:  pixi
-version: 0.1.2
+version: 0.1.3
 description: >
   Port of the pixi.js library for 2D graphics using WebGL where available and the
   canvas where not.
@@ -7,11 +7,11 @@ author: Dan Parnham <dan@teadriven.me.uk>
 homepage: http://github.com/emergent-design/pixi.dart
 
 dependencies:
+  #observe: ">=0.10.1 < 0.12.0"
   browser: ">=0.9.0 < 1.0.0"
-  js: ">=0.2.0 < 0.3.0"
 
 environment:
   sdk: ">=0.8.10+6 <2.0.0"
 
 dev_dependencies:
-  unittest: any
+  #unittest: any
